Done: -All endpoints done respecting all the requirements. -Integration tests for endpoints and other operations (coverage at 70%).
TODO:
Documentation: do documentation of the API.
Focus : CRUD endpoints.
Config:
- Logging.
- Proper actuator measures.
Endpoints:
- Add city.
Testing:
- Finalize integration test for endpoint getters and better tailor assess to study real behaviour measured.
- Write key unit tests.