@@ -1,37 +1,43 @@
 package com.safety.net.alerts.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.safety.net.alerts.model.FullJoin;
-import com.safety.net.alerts.model.MedicalRecords;
-import com.safety.net.alerts.model.Persons;
 import com.safety.net.alerts.model.PersonsMedicalRecordsJoin;
-import jakarta.persistence.criteria.CriteriaBuilder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
+import java.util.stream.Stream;
+
+import static java.util.Arrays.stream;
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toList;
 
 @Service
 public class PeopleService {
-    private MergeService mergeService;
+    private ObjectMapper mapper = new ObjectMapper();
+    private MergeService mergeService = new MergeService(mapper);
+
     @Autowired
     public void setMyService(MergeService mergeService) {
         this.mergeService = mergeService;
     } //Injection of the Service
+
     /**
      * Chjildren at address = age <= 18
      *
      * @param address
      * @return list
      */
-    public List<PersonsMedicalRecordsJoin> childrenAtAddress(String address) throws Exception {
+    public List<PersonsMedicalRecordsJoin> childrenAtAddress(String address) {
         //Instantiation of models and data retrieval
         List<PersonsMedicalRecordsJoin> people = mergeService.PeopleMedicalJoin();
         return people.stream()
                 .filter(children -> Integer.parseInt(children.getBirthdate()) <= 18)
                 .filter(children -> children.getAddress().equals(address))
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     /**
@@ -40,13 +46,13 @@ public class PeopleService {
      * @param address
      * @return list
      */
-    public List<PersonsMedicalRecordsJoin> famillyAtAddress(String address) throws Exception {
+    public List<PersonsMedicalRecordsJoin> famillyAtAddress(String address) {
         //Instantiation of models and data retrieval
         List<PersonsMedicalRecordsJoin> people = mergeService.PeopleMedicalJoin();
         return people.stream()
                 .filter(children -> Integer.parseInt(children.getBirthdate()) > 18)
                 .filter(children -> children.getAddress().equals(address))
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     /**
@@ -55,26 +61,13 @@ public class PeopleService {
      * @return PersonMediRecord
      */
     public List<PersonsMedicalRecordsJoin> specificPerson(String firstName, String lastName) throws Exception {
-        // optimiser les conditions if else dans le stream (skip?)
         //Instantiation of models and data retrieval
         List<PersonsMedicalRecordsJoin> people = mergeService.PeopleMedicalJoin();
-        if (lastName.isEmpty()) {
-            return people.stream()
-            .filter(person -> person.getFirstName().equals(firstName))
-             .collect(Collectors.toList());
-        }
-        else if (firstName.isEmpty()){
-            return people.stream()
-                    .filter(person -> person.getLastName().equals(lastName))
-                    .collect(Collectors.toList());
 
-        }
-        else{
-            return people.stream()
-                    .filter(person -> person.getLastName().equals(lastName))
-                    .filter(person -> person.getFirstName().equals(firstName))
-                    .collect(Collectors.toList());
-        }
+        return people.stream()
+                .filter(person -> person.getFirstName().equals(firstName) || person.getFirstName().isEmpty())
+                .filter(person -> person.getLastName().equals(lastName) || person.getLastName().isEmpty())
+                .collect(toList());
     }
 
     /**
@@ -88,7 +81,7 @@ public class PeopleService {
         List<FullJoin> people = mergeService.FullJoin();
         return people.stream()
                 .filter(person -> person.getAddress().equals(address))
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     /**
@@ -97,12 +90,60 @@ public class PeopleService {
      * @param station
      * @return list of firestations serving
      */
-    public List<FullJoin> peopleAtStation(int station) throws Exception {
+    public Map<List<Map<String, Integer>>,List<FullJoin>> peopleAtStation(int station) throws Exception {
+        //Instantiation of models and data retrieval
+        List<FullJoin> people = mergeService.FullJoin();
+        PeopleService peopleService = new PeopleService();
+        people = people.stream()
+                .filter(person -> person.getStation() == station)
+                .collect(toList());
+
+        List<Map<String, Integer>> peopleCount =
+                Stream.of(Map.of("children", peopleService.countChildren(station)), Map.of("adults", peopleService.countAdults(station))).toList();
+
+        people.forEach(person-> person.setPeopleCount(peopleCount));
+
+        return people.stream()
+                .collect(groupingBy(FullJoin::getPeopleCount));
+    }
+
+    /**
+     * Chjildren at station = age <= 18
+     *
+     * @param station
+     * @return list
+     */
+    public int countChildren(int station) throws Exception {
         //Instantiation of models and data retrieval
         List<FullJoin> people = mergeService.FullJoin();
         return people.stream()
-                .filter(person -> person.getStation() == station)
-                .collect(Collectors.toList());
+                .filter(children -> Integer.parseInt(children.getBirthdate()) <= 18)
+                .filter(children -> children.getStation() == station)
+                .toList().size();
     }
+
+    public int countAdults(int station) throws Exception {
+        //Instantiation of models and data retrieval
+        List<FullJoin> people = mergeService.FullJoin();
+        return people.stream()
+                .filter(children -> Integer.parseInt(children.getBirthdate()) > 18)
+                .filter(children -> children.getStation() == station)
+                .toList().size();
+    }
+
+    /**
+     * People at specific address and determines which firestation services them
+     *
+     * @param station
+     * @return list of firestations served by address for a given station
+     */
+    public Map<String,List<FullJoin>> peopleAtAddressWithFirestationGroupedByAddress(List<Integer> station) throws Exception {
+        //Instantiation of models and data retrieval
+        List<FullJoin> people = mergeService.FullJoin();
+        return people.stream()
+                .filter(person -> station.contains(person.getStation()))
+                .collect(groupingBy(FullJoin::getAddress, toList()));
+    }
+
 
 }
